# FirstCoder

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  swe-bench-fast.toml
benchmark/: __init__.py
docs/: AGENT_LOOP_GUARDRAILS.md  AGENT_LOOP_GUARDRAILS.zh-CN.md  AGENT_LOOP_GUARDRAILS_GOAL.md  AGENT_LOOP_GUARDRAILS_IMPLEMENTATION_PLAN.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  ASYNC_SUBAGENTS_DAG_DESIGN.md  ASYNC_SUBAGENTS_DAG_DESIGN.zh-CN.md  CLI_TUI_DESIGN.md  CLI_TUI_DESIGN.zh-CN.md  CLI_TUI_GOAL.md  CLI_TUI_IMPLEMENTATION_PLAN.md  CONTEXT_MANAGEMENT_DESIGN.md  CONTEXT_MANAGEMENT_DESIGN.zh-CN.md  LOCAL_PYTEST_BENCHMARK.md  MCP.md  MCP.zh-CN.md  MULTIMODAL_INPUT_DESIGN.md  MULTIMODAL_INPUT_DESIGN.zh-CN.md  PERMISSIONS_DESIGN.md  PERMISSIONS_DESIGN.zh-CN.md  PROVIDERS_DESIGN.md  PROVIDERS_DESIGN.zh-CN.md  README.md  README.zh-CN.md  SHELL_EXECUTION_SANDBOX_GOAL.md  SKILL_SYSTEM_DESIGN.md  SKILL_SYSTEM_DESIGN.zh-CN.md  SWE_BENCH_FAST_RUNBOOK.md  SWE_LITE_IMPLEMENTATION_PLAN.md  SWE_LITE_RUNBOOK.md  TOOLS_DESIGN.md  TOOLS_DESIGN.zh-CN.md  async-subagents-dag-plan.md
firstcoder/: __init__.py  __main__.py  cli.py
tests/: __init__.py  conftest.py  test_agent_context_loop.py  test_agent_e2e.py  test_agent_loop_limits.py  test_agent_prompt_inputs.py  test_agent_skill_flow.py  test_agent_tool_flow.py  test_agent_verification.py  test_app_context_commands.py  test_app_factory.py  test_app_help_commands.py  test_app_mcp_commands.py  test_app_model_commands.py  test_app_runtime.py  test_app_session_commands.py  test_app_tui.py  (+85 more)
(+217 files in other folders)
